hphp/hack/test/typecheck/nothing/nothing_keyword.php
<?hh
// Copyright 2004-present Facebook. All Rights Reserved.

newtype nothing = mixed;
